# fluxo

./: Cargo.toml  README.md
.cargo/: config
src/: app.rs  buf.rs  cli.rs  cmd.rs  edt.rs  err.rs  ide.rs  key.rs  lib.rs  par.rs  pmt.rs  scr.rs
src/ast/: ctx.rs  exp.rs  mod.rs  var.rs
src/ide/: cmd.rs  mod.rs  req.rs  scr.rs  win.rs
