[package]
name = "fluxo"
version = "0.1.0"
description = "a general-purpose programming language"
authors = ["Ramnath R Iyer <riyer@optimix.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rri/fluxo"
edition = "2021"
categories = ["compilers"]
keywords = ["compilers"]

[dependencies]
clap = {version = "3", features = ["cargo", "derive"]}
crossterm = { version = "0.25" }
exitcode = { version = "1" }
